gateway/urirule01.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: red-dsrule-01
spec:
  host: webapp-servicered.default.svc.cluster.local
  subsets:
  - name: app-service-reduri
    labels:
      app: webappred
      chapter: istio
      topic: traffic-management
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
