gateway/urirule02.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: yellow-dsrule-01
spec:
  host: webapp-serviceyellow.default.svc.cluster.local
  subsets:
  - name: app-service-yellowuri
    labels:
      app: webappyellow
      chapter: istio
      topic: traffic-management
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN
